--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -41,7 +41,7 @@
                     <MudText Typo="Typo.h5">Final standings</MudText>
                     <MudTable T="Result" Items="@Results.OrderBy(e => e.Position)" Dense="true" Class="extra-dense">
                         <HeaderContent>
-                            <MudTh>#</MudTh>
+                            <MudTh></MudTh>
                             <MudTh>Name</MudTh>
                             <MudTh>Points</MudTh>
                         </HeaderContent>
