--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -33,10 +33,10 @@
                 </MudStack>
             </ToolBarContent>
             <HeaderContent>
-                <MudTh>#</MudTh>
-                <MudTh Class="pa-0"></MudTh>
+                <MudTh></MudTh>
+                <MudTh Class="accent-cell"></MudTh>
                 <MudTh>Driver</MudTh>
-                <MudTh Class="number-col">No.</MudTh>
+                <MudTh Class="number-col">NO</MudTh>
                 <MudTh>Team</MudTh>
                 <MudTh Class="number-col-xl">PWR</MudTh>
                 @for (int i = 1; i <= Model.AmountRuns; i++)
@@ -51,8 +51,8 @@
                 <MudTd>
                     <DriverPosition Number="@context.Position" Colour="@context.Colour" Accent="@context.Accent" />
                 </MudTd>
-                <MudTd Class="pa-0">
-                    <span class="smol-accent" style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))"></span>
+                <MudTd Class="accent-cell">
+                    <SmolAccent Colour="@context.Colour" />
                 </MudTd>
                 <MudTd>
                     <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
