--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -30,9 +30,9 @@
             <MudTh>Country</MudTh>
             <MudTh>Race</MudTh>
             <MudTh>Weather</MudTh>
-            <MudTh Class="number-col"></MudTh>
+            <MudTh Class="number-col">NO</MudTh>
             <MudTh>Polesitter</MudTh>
-            <MudTh Class="number-col"></MudTh>
+            <MudTh Class="number-col">NO</MudTh>
             <MudTh>Winner driver</MudTh>
             <MudTh>Winner team</MudTh>
             <MudTh>Status</MudTh>
@@ -40,16 +40,16 @@
         </HeaderContent>
         <RowTemplate>
             <MudTd Class="number-col">
-                <MudText>@context.Round</MudText>
+                <MudText Typo="Typo.caption">@context.Round</MudText>
             </MudTd>
             <MudTd>
-                <CountryNamedFlag Code="@context.Country" Size="FlagSize.Small" Class="overflow-hider" />
+                <CountryNamedFlag Code="@context.Country" Size="FlagSize.Small" Reverse="true" Class="overflow-hider" />
             </MudTd>
             <MudTd>
                 <MudText Class="overflow-hider">@context.Name</MudText>
             </MudTd>
             <MudTd>
-                <MudStack Row="true" AlignItems="AlignItems.Center" Spacing="2">
+                <MudStack Row="true" AlignItems="AlignItems.Center" Spacing="3">
                     <MudIcon Icon="@context.WeatherIcon" />
                     <MudText>@context.Weather</MudText>
                 </MudStack>
