--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditDrivers.razor
@@ -8,7 +8,7 @@
             <MudText Color="Color.Info">Don't worry about the numbers, these fix themselves</MudText>
         }
         <MudForm>
-            <MudTable T="EditSeasonDriverModel" Items="@Model.SeasonDrivers" Hover="true">
+            <MudTable T="EditSeasonDriverModel" Items="@Model.SeasonDrivers" Hover="true" Class="overflow-hider">
                 <HeaderContent>
                     <MudTh>Name</MudTh>
                     <MudTh>Number</MudTh>
