--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditEngines.razor
@@ -3,7 +3,7 @@
 <MudContainer MaxWidth="MaxWidth.Small">
     <MudPaper Elevation="15">
         <MudForm>
-            <MudTable T="EditSeasonEngineModel" Items="@Model.SeasonEngines" Hover="true">
+            <MudTable T="EditSeasonEngineModel" Items="@Model.SeasonEngines" Hover="true" Class="overflow-hider">
                 <HeaderContent>
                     <MudTh>Name</MudTh>
                 </HeaderContent>
