--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditTeams.razor
@@ -4,7 +4,7 @@
 <MudContainer MaxWidth="MaxWidth.ExtraLarge">
     <MudPaper Elevation="15">
         <MudForm>
-            <MudTable T="EditSeasonTeamModel" Items="@Model.SeasonTeams" Hover="true">
+            <MudTable T="EditSeasonTeamModel" Items="@Model.SeasonTeams" Hover="true" Class="overflow-hider">
                 <HeaderContent>
                     <MudTh Style="min-width: 200px;">Team</MudTh>
                     <MudTh Style="min-width: 200px;">Name</MudTh>
