--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/FinalCheck.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/FinalCheck.razor
@@ -5,7 +5,7 @@
     <MudGrid>
         <MudItem xs="3">
             <MudPaper Elevation="5">
-                <MudTable Items="@Model.SeasonEngines">
+                <MudTable Items="@Model.SeasonEngines" Class="overflow-hider">
                     <ToolBarContent>
                         <MudText Typo="Typo.h6">Engines</MudText>
                     </ToolBarContent>
@@ -22,7 +22,7 @@
         </MudItem>
         <MudItem xs="5">
             <MudPaper Elevation="5">
-                <MudTable Items="@Model.SeasonTeams">
+                <MudTable Items="@Model.SeasonTeams" Class="overflow-hider">
                     <ToolBarContent>
                         <MudText Typo="Typo.h6">Teams</MudText>
                     </ToolBarContent>
@@ -59,7 +59,7 @@
         </MudItem>
         <MudItem xs="4">
             <MudPaper Elevation="5">
-                <MudTable Items="@Model.SeasonDrivers">
+                <MudTable Items="@Model.SeasonDrivers" Class="overflow-hider">
                     <ToolBarContent>
                         <MudText Typo="Typo.h6">Drivers</MudText>
                     </ToolBarContent>
