--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
@@ -14,7 +14,7 @@
         <Columns>
             <TemplateColumn T="SeasonDriver" Sortable="false" Class="accent-cell">
                 <CellTemplate>
-                    <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Item.SeasonTeam?.Colour ?? Constants.DefaultColour))"></span>
+                    <SmolAccent Colour="@context.Item.SeasonTeam?.Colour" />
                 </CellTemplate>
             </TemplateColumn>
             <TemplateColumn T="SeasonDriver" Title="Name" SortBy="e => e.Driver.FirstName">
