--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
@@ -10,7 +10,7 @@
             <MudButton Variant="Variant.Filled" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterEngine">New</MudButton>
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="SeasonEngine" Items="SeasonEngineData">
+    <MudDataGrid T="SeasonEngine" Items="SeasonEngineData" Dense="true">
         <Columns>
             <PropertyColumn Property="e => e.Name" />
             <PropertyColumn Property="e => e.Power" />
