--- a/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
+++ b/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
@@ -17,7 +17,7 @@
                     <MudTable Items="@PartsPerDriver">
                         <HeaderContent>
                             <MudTh>Name</MudTh>
-                            <MudTh Class="pa-0">No</MudTh>
+                            <MudTh Class="pa-0">NO</MudTh>
                             <MudTh>DNF</MudTh>
                             <MudTh>DSQ</MudTh>
                         </HeaderContent>
