--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
@@ -16,7 +16,7 @@
             </MudStack>
         </ToolBarContent>
         <HeaderContent>
-            <MudTh Class="number-col">#</MudTh>
+            <MudTh Class="number-col"></MudTh>
             <MudTh Class="accent-cell"></MudTh>
             <MudTh>Team</MudTh>
             <MudTh>Principal</MudTh>
@@ -34,7 +34,7 @@
             <DriverPosition Number="@context.Position" Colour="@context.Colour" Accent="@context.Accent" />
         </MudTd>
         <MudTd Class="accent-cell">
-            <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
+            <SmolAccent Colour="@context.Colour" />
         </MudTd>
         <MudTd Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
             <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
