--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
@@ -17,10 +17,10 @@
             </MudStack>
         </ToolBarContent>
         <HeaderContent>
-            <MudTh Class="number-col">#</MudTh>
+            <MudTh Class="number-col"></MudTh>
             <MudTh Class="accent-cell"></MudTh>
             <MudTh>Driver</MudTh>
-            <MudTh Class="number-col">NO.</MudTh>
+            <MudTh Class="number-col">NO</MudTh>
             <MudTh>PTS</MudTh>
             @foreach (var round in CountryRounds.OrderBy(e => e.Key))
             {
@@ -35,7 +35,7 @@
                 <DriverPosition Number="@context.Position" Colour="@context.Colour" Accent="@context.Accent" />
             </MudTd>
             <MudTd Class="accent-cell">
-                <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
+                <SmolAccent Colour="@context.Colour" />
             </MudTd>
             <MudTd>
                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
