--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverStandings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverStandings.razor
@@ -4,10 +4,10 @@
     </MudPaper>
     <MudTable T="StandingDriverModel" Items="@StandingDrivers" Dense="true">
         <HeaderContent>
-            <MudTh Class="number-col">#</MudTh>
+            <MudTh Class="number-col"></MudTh>
             <MudTh Class="accent-cell"></MudTh>
             <MudTh>Name</MudTh>
-            <MudTh Class="number-col">No.</MudTh>
+            <MudTh Class="number-col">NO</MudTh>
             <MudTh>
                 <MudTableSortLabel SortBy="new Func<StandingDriverModel, object>(e => e.Points)">PTS</MudTableSortLabel>
             </MudTh>
@@ -17,7 +17,7 @@
                 <DriverPosition Number="@context.Position" Colour="@context.Colour" Accent="@context.Accent" />
             </MudTd>
             <MudTd Class="accent-cell">
-                <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
+                <SmolAccent Colour="@context.Colour" />
             </MudTd>
             <MudTd>
                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
