--- a/SimTECH/SimTECH/Pages/Season/Seasons.razor
+++ b/SimTECH/SimTECH/Pages/Season/Seasons.razor
@@ -20,7 +20,7 @@
         <MudDataGrid T="SeasonListModel" Items="@SeasonList.OrderBy(e => e.Year)" Dense="true">
             <Columns>
                 <PropertyColumn Property="e => e!.Year" />
-                <TemplateColumn T="SeasonListModel" Title="No." SortBy="e => e!.DriverNumber" HeaderClass="number-col hide-sort-icons" CellClass="number-col">
+                <TemplateColumn T="SeasonListModel" Title="NO" SortBy="e => e!.DriverNumber" HeaderClass="number-col hide-sort-icons" CellClass="number-col">
                     <CellTemplate>
                         <NumberDisplay Colour="@Constants.PrimaryColourDefault"
                                        Accent="@Constants.DefaultAccent">
