--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -16,7 +16,7 @@
                 <MudText Typo="Typo.h3">SimTECH</MudText>
             </MudPaper>
         </MudItem>
-        <MudItem xs="12" sm="6" md="4">
+        <MudItem xs="12" sm="6">
             <MudPaper Elevation="5" MinHeight="100px" Class="pa-4 mud-height-full">
                 <MudTable Items="@activeSeasons" Dense="true">
                     <ToolBarContent>
@@ -47,76 +47,9 @@
                 </MudTable>
             </MudPaper>
         </MudItem>
-        <MudItem xs="12" sm="6" md="4">
+        <MudItem xs="12" sm="6">
             <MudPaper Elevation="5" MinHeight="100px" Class="pa-4 mud-height-full">
-                
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="12" sm="12" md="4">
-            <MudPaper Elevation="5" MinHeight="100px" Class="pa-4 mud-height-full">
-                
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="12" sm="7">
-            <MudPaper Elevation="5" Class="pa-4 mud-height-full">
-                <MudTable id="recent-race-table" Items="@recentRaces" Dense="true">
-                    <ToolBarContent>
-                        <MudText Typo="Typo.h5">Last races</MudText>
-                        <MudSpacer />
-                        <ScreenshotButton TargetId="recent-race-table" />
-                    </ToolBarContent>
-                    <HeaderContent>
-                        <MudTh>
-                            <MudTableSortLabel SortBy="new Func<FinishedRaceModel, object>(e => e.LeagueName)">
-                                League
-                            </MudTableSortLabel>
-                        </MudTh>
-                        <MudTh>Race</MudTh>
-                        <MudTh Class="pa-0"></MudTh>
-                        <MudTh>Team</MudTh>
-                        <MudTh Class="number-col">No.</MudTh>
-                        <MudTh>Driver</MudTh>
-                        <MudTh></MudTh>
-                    </HeaderContent>
-                    <RowTemplate>
-                        <MudTd>
-                            <MudText Typo="Typo.body2">@context.LeagueName</MudText>
-                        </MudTd>
-                        <MudTd>
-                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                                <MudText Typo="Typo.body2">[R@(context.Round)] @(context.Name)</MudText>
-                                <MudSpacer />
-                                <CountryFlag Code="@context.Country" Size="FlagSize.Tiny" />
-                            </MudStack>
-                        </MudTd>
-                        <MudTd Class="pa-0">
-                            <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.WinningDriver.Colour))"></span>
-                        </MudTd>
-                        <MudTd>
-                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                                <MudText Typo="Typo.body2">@context.WinningTeam.Name</MudText>
-                            </MudStack>
-                        </MudTd>
-                        <MudTd Class="number-col">
-                            <NumberDisplay Colour="@context.WinningDriver.Colour" Accent="@context.WinningDriver.Accent">@context.WinningDriver.Number</NumberDisplay>
-                        </MudTd>
-                        <MudTd>
-                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                                <MudText Typo="Typo.body2">@context.WinningDriver.Name</MudText>
-                            </MudStack>
-                        </MudTd>
-                        <MudTd>
-                            <MudButton Variant="Variant.Text"
-                                       Color="Color.Secondary"
-                                       OnClick="@(() => GoToPostRace(context.RaceId))">Go</MudButton>
-                        </MudTd>
-                    </RowTemplate>
-                </MudTable>
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="12" sm="5">
-            <MudPaper Elevation="5" Class="pa-4 mud-height-full">
-                <MudTable T="FinishedRaceModel" Items="@upcomingRaces" Dense="true">
+                <MudTable T="FinishedRaceModel" Items="@upcomingRaces" Dense="true" Class="overflow-hider">
                     <ToolBarContent>
                         <MudText Typo="Typo.h5">Upcoming races</MudText>
                     </ToolBarContent>
@@ -149,17 +82,79 @@
                 </MudTable>
             </MudPaper>
         </MudItem>
+        <MudItem xs="12" md="9">
+            <MudPaper Elevation="5" Class="pa-4 mud-height-full">
+                <MudTable id="recent-race-table" Items="@recentRaces" Dense="true" Class="overflow-hider">
+                    <ToolBarContent>
+                        <MudText Typo="Typo.h5">Last races</MudText>
+                        <MudSpacer />
+                        <ScreenshotButton TargetId="recent-race-table" />
+                    </ToolBarContent>
+                    <HeaderContent>
+                        <MudTh>
+                            <MudTableSortLabel SortBy="new Func<FinishedRaceModel, object>(e => e.LeagueName)">
+                                League
+                            </MudTableSortLabel>
+                        </MudTh>
+                        <MudTh>Race</MudTh>
+                        <MudTh Class="pa-0"></MudTh>
+                        <MudTh>Team</MudTh>
+                        <MudTh Class="number-col">NO</MudTh>
+                        <MudTh>Driver</MudTh>
+                        <MudTh></MudTh>
+                    </HeaderContent>
+                    <RowTemplate>
+                        <MudTd>
+                            <MudText Typo="Typo.body2">@context.LeagueName</MudText>
+                        </MudTd>
+                        <MudTd>
+                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
+                                <MudText Typo="Typo.body2">[R@(context.Round)] @(context.Name)</MudText>
+                                <MudSpacer />
+                                <CountryFlag Code="@context.Country" Size="FlagSize.Tiny" />
+                            </MudStack>
+                        </MudTd>
+                        <MudTd Class="accent-cell">
+                            <SmolAccent Colour="@context.WinningDriver.Colour" />
+                        </MudTd>
+                        <MudTd>
+                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
+                                <MudText Typo="Typo.body2">@context.WinningTeam.Name</MudText>
+                            </MudStack>
+                        </MudTd>
+                        <MudTd Class="number-col">
+                            <NumberDisplay Colour="@context.WinningDriver.Colour" Accent="@context.WinningDriver.Accent">@context.WinningDriver.Number</NumberDisplay>
+                        </MudTd>
+                        <MudTd>
+                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
+                                <MudText Typo="Typo.body2">@context.WinningDriver.Name</MudText>
+                            </MudStack>
+                        </MudTd>
+                        <MudTd>
+                            <MudButton Variant="Variant.Text"
+                                       Color="Color.Secondary"
+                                       OnClick="@(() => GoToPostRace(context.RaceId))">Go</MudButton>
+                        </MudTd>
+                    </RowTemplate>
+                </MudTable>
+            </MudPaper>
+        </MudItem>
+        <MudItem xs="12" md="3">
+            <MudPaper Elevation="5" Class="pa-4 mud-height-full">
+                
+            </MudPaper>
+        </MudItem>
     </MudGrid>
 </MudContainer>
 
-    @code {
-    List<League> activeLeagues;
-    List<Data.Models.Season> activeSeasons = new();
+@code {
+    private List<League> activeLeagues;
+    private List<Data.Models.Season> activeSeasons = new();
 
-    List<FinishedRaceModel> recentRaces = new();
-    List<FinishedRaceModel> upcomingRaces = new();
+    private List<FinishedRaceModel> recentRaces = new();
+    private List<FinishedRaceModel> upcomingRaces = new();
 
-    int raceAmount = 5;
+    private int raceAmount = 5;
 
     protected override async Task OnInitializedAsync()
     {
