--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -105,8 +105,8 @@
                                     }
                                 }
                             </MudTd>
-                            <MudTd Class="pa-0">
-                                <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
+                            <MudTd Class="accent-cell">
+                                <SmolAccent Colour="@context.Colour" />
                             </MudTd>
                             <MudTd>
                                 <MudText>@context.FullName</MudText>
