--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignDriverTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignDriverTeams.razor
@@ -27,7 +27,7 @@
                                                  Identifier="@seasonTeam.TeamId.ToString()"
                                                  Class="mud-width-full mud-height-full rounded-lg border-2 border-solid mud-border-lines-default pa-4">
                                         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
-                                            <MudText>@seasonTeam.Name</MudText>
+                                            <MudText Class="overflow-hider">@seasonTeam.Name</MudText>
                                             <MudSpacer />
                                             <CountryFlag Code="@(seasonTeam.Team?.Country ?? Constants.DefaultCountry)" />
                                         </MudStack>
@@ -41,7 +41,7 @@
             <ItemRenderer>
                 <MudPaper Class="mud-width-full border-2 border-dashed mud-border-tertiary pa-1 my-2">
                     <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-1">
-                        <MudText>@(context.Driver?.FullName)</MudText>
+                        <MudText Class="overflow-hider">@(context.Driver?.FullName)</MudText>
                         <MudSpacer />
                         <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="FlagSize.Small" />
                     </MudStack>
