--- a/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
@@ -14,25 +14,25 @@
                 <TemplateColumn T="PowerRankModel" SortBy="e => e.DriverName" Title="Driver">
                     <CellTemplate>
                         <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-0">
-                            <MudText Typo="Typo.body2">@context.Item.DriverName</MudText>
+                            <MudText Typo="Typo.body2" Class="overflow-hider">@context.Item.DriverName</MudText>
                             <CountryFlag Code="@context.Item.Nationality" Size="FlagSize.Small" />
                         </MudStack>
                     </CellTemplate>
                 </TemplateColumn>
                 <TemplateColumn T="PowerRankModel"
                                 SortBy="e => e.DriverNumber"
-                                Title="NO."
+                                Title="NO"
                                 HeaderClass="number-col hide-sort-icons"
                                 CellClass="number-col">
                     <CellTemplate>
                         <NumberDisplay Colour="@context.Item.Colour" Accent="@context.Item.Accent">@context.Item.DriverNumber</NumberDisplay>
                     </CellTemplate>
                 </TemplateColumn>
-                <PropertyColumn Property="e => e.TeamName" Title="Team" CellStyleFunc="@SimpleCellStyle" />
-                <PropertyColumn Property="e => e!.Engine" Title="Engine" />
-                <PropertyColumn Property="e => e!.Manufacturer" />
-                <PropertyColumn Property="e => e!.QualyPower" Title="Q.PWR" CellClass="font-caption" />
-                <PropertyColumn Property="e => e!.RacePower" Title="R.PWR" CellClass="font-caption" />
+                <PropertyColumn Property="e => e.TeamName" Title="Team" CellClass="overflow-hider" CellStyleFunc="@SimpleCellStyle" />
+                <PropertyColumn Property="e => e!.Engine" Title="Engine" HeaderClass="hide-sort-icons" />
+                <PropertyColumn Property="e => e!.Manufacturer" Title="Supplier" HeaderClass="hide-sort-icons" />
+                <PropertyColumn Property="e => e!.QualyPower" Title="Q.PWR" CellClass="font-caption" HeaderClass="hide-sort-icons" />
+                <PropertyColumn Property="e => e!.RacePower" Title="R.PWR" CellClass="font-caption" HeaderClass="hide-sort-icons" />
                 <TemplateColumn T="PowerRankModel" Title="A/C/P" Sortable="false">
                     <CellTemplate>
                         <MudText Typo="Typo.caption">@context.Item.Aero / @context.Item.Chassis / @context.Item.Powertrain</MudText>
