--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeams.razor
@@ -11,17 +11,17 @@
             <MudButton Variant="Variant.Filled" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterTeam">New</MudButton>
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="SeasonTeam" Items="@SeasonTeamEntrants">
+    <MudDataGrid T="SeasonTeam" Items="@SeasonTeamEntrants" Dense="true" Class="overflow-hider">
         <Columns>
             <TemplateColumn Sortable="false" Class="accent-cell">
                 <CellTemplate>
-                    <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Item?.Colour ?? Constants.DefaultColour))"></span>
+                    <SmolAccent Colour="@context.Item?.Colour" />
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e!.Name" />
             <TemplateColumn T="SeasonTeam" SortBy="e => e.Team.Country" Title="Country">
                 <CellTemplate>
-                    <CountryNamedFlag Code="@context.Item.Team.Country" Size="FlagSize.Small" Reverse="true" />
+                    <CountryNamedFlag Code="@context.Item.Team.Country" Size="FlagSize.Small" Reverse="true" Typo="Typo.body2" />
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e!.Principal" />
