--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorStandings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorStandings.razor
@@ -4,7 +4,7 @@
     </MudPaper>
     <MudTable T="StandingTeamModel" Items="@StandingConstructors" Dense="true">
         <HeaderContent>
-            <MudTh Class="number-col">#</MudTh>
+            <MudTh Class="number-col"></MudTh>
             <MudTh Class="accent-cell"></MudTh>
             <MudTh>Team</MudTh>
             <MudTh>Principal</MudTh>
@@ -15,7 +15,7 @@
                 <DriverPosition Number="@context.Position" Colour="@context.Colour" Accent="@context.Accent" />
             </MudTd>
             <MudTd Class="accent-cell">
-                <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
+                <SmolAccent Colour="@context.Colour" />
             </MudTd>
             <MudTd>
                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
