--- a/SimTECH/SimTECH/Pages/Season/Stats/QualyBattles.razor
+++ b/SimTECH/SimTECH/Pages/Season/Stats/QualyBattles.razor
@@ -7,6 +7,7 @@
     </TitleContent>
     <DialogContent>
         <MudContainer>
+            @* use a grouped table here, dimwit *@
             <MudPaper>
                 @if (QualifyingBattles != null)
                 {
